--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
  },
  "dependencies": {
+  "@google-cloud/documentai": "^8.12.0",
+  "@google-cloud/storage": "^7.15.2",
   "@heroui/button": "2.2.13",
+  "@heroui/card": "^2.2.13",
   "@heroui/code": "2.2.10",
+  "@heroui/image": "^2.2.9",
   "@heroui/input": "2.4.13",
   "@heroui/kbd": "2.2.10",
   "@heroui/link": "2.2.11",
@@ -24,7 +28,8 @@
   "@react-aria/ssr": "3.9.7",
   "@react-aria/visually-hidden": "3.8.19",
   "clsx": "2.1.1",
-  "framer-motion": "11.13.1",
+  "exceljs": "^4.4.0",
+  "framer-motion": "^11.13.1",
   "intl-messageformat": "^10.5.0",
   "next": "15.0.4",
   "next-themes": "^0.4.4",
